# dielema

./: .gitignore  DEPLOY.md  README.md  check-dlm-program.js
backend/: .env.example  deploy-railway.sh  package-lock.json  package.json  railway.toml  tsconfig.json
backend/src/: index-multi-chain.ts  index.ts
client/: .env.example  .env.production  .gitignore  App.test.tsx  App.tsx  app.json  global.d.ts  index.ts  metro.config.js  netlify.toml  package-lock.json  package.json  shim.ts  test-claimable-deposits.js  test-single-rpc.js  test-transaction.js  types.ts
client/android/: gradle.properties  settings.gradle
client/components/: ChainSelector.tsx  DepositCard.tsx  LanguageSwitcher.tsx  MobileContainer.tsx
client/config/: buildConfig.ts
client/i18n/: LanguageContext.tsx  translations.ts
client/ios/: Podfile
client/navigation/: AppNavigator.tsx
client/screens/: AddDepositScreen.tsx  HomeScreen.tsx  HomeScreen.tsx.deprecated  ProofOfLifeScreen.tsx
client/utils/: dlmToken.ts  mwaStub.js  solanaMobileWallet.ts  solanaProgram.ts  solanaTokens.ts  wallet.ts
client/website/: index.html
dielemma-program/: Anchor.toml  Cargo.toml  DEPLOYMENT.md  DEPLOY_GUIDE.md  FIXES_SUMMARY.md  README.md  SECURITY_AUDIT_FINAL.md  SECURITY_AUDIT_REPORT.md  TEST_RESULTS.md  debug-token-account.ts  deploy.sh  my-program-keypair.json  package-lock.json  recovered-buffer-keypair.json  send-dlm.ts  verify-fix.ts
dielemma-program-success-build/: Anchor.toml  DEPLOYMENT.md  SECURITY_AUDIT_REPORT.md  TEST_RESULTS.md  package-lock.json  package.json  run-test.sh  tsconfig.json
dielemma-program-success-build/src/: lib.rs
dielemma-program-success-build/tests/: helpers.ts  (+2 more)
dielemma-program/.cargo/: config.toml
dielemma-program/src/: lib.rs
dielemma-program/tests/: helpers.ts  security-tests.ts  test-all.ts  test-dlm-proof-of-life.ts  test-proof-only.ts  test-wsol.ts
evm-contract/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
shared/: package.json
sol-program/: Anchor.toml  Cargo.toml  DEPLOYMENT.md  FIXES_SUMMARY.md  README.md  SECURITY_AUDIT_NEW.md  SECURITY_FIXES_APPLIED.md  deploy.sh  my-program-keypair.json  package.json  recovered-buffer-keypair.json
sol-program/.cargo/: config.toml
sol-program/scripts/: close-accounts.ts
sol-program/src/: lib.rs
sol-program/tests/: helpers.ts  security-tests.ts  test-all.ts  test-proof-only.ts  test-wsol.ts
website/: index.html
(+34 files in other folders)
