[package]
name = "dielemma-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.18"
borsh = "0.10"
borsh-derive = "0.10"
spl-token = { version = "4.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
