[package]
name = "dielemma-program"
version = "0.1.0"
edition = "2021"

[profile.release]
overflow-checks = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "=1.17.31"
borsh = "0.10"
borsh-derive = "0.10"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
# Force older blake3 compatible with platform-tools rustc 1.75
blake3 = { version = ">=1.5.0, <1.6.0", features = ["digest"] }

# Dev dependencies removed for build compatibility
# [dev-dependencies]
# solana-program-test = "=1.17.31"
# solana-sdk = "=1.17.31"
