[package]
name = "dielemma-program"
version = "0.1.0"
edition = "2021"

[profile.release]
overflow-checks = true
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization with single codegen unit
strip = true        # Remove debug symbols
panic = "abort"     # Reduce binary size by removing panic unwinding code

[profile.release.build-override]
opt-level = "z"     # Optimize build scripts for size
codegen-units = 1   # Use single codegen unit for build scripts

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["skip-no-realloc"]
skip-no-realloc = []

[dependencies]
solana-program = "=1.17.31"
borsh = { version = "0.10", default-features = false, features = ["std"] }
borsh-derive = "0.10"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
# Force older blake3 compatible with platform-tools rustc 1.75
blake3 = { version = ">=1.5.0, <1.6.0", default-features = false, features = ["digest"] }

# Dev dependencies removed for build compatibility
# [dev-dependencies]
# solana-program-test = "=1.17.31"
# solana-sdk = "=1.17.31"
